<resources>
    <string name="app_name">TouristAPP</string>
    <string name="styleSwitchDesc">Ciemny motyw</string>
    <string name="TurnOnFlashlight">ON</string>
    <string name="TurnOffFlashlight">OFF</string>
    <string name="flashlightTextView">Latarka</string>
    <string name="sosButton">SOS</string>
    <string name="bgDesc">Background compass</string>
    <string name="pointerDesc">Pointer compass</string>
    <string name="compassBackgroundDesc">Compass Background</string>
    <string name="CompassPointerDesc">Compass Pointer</string>
    <string name="changeThemeTextView">Autom. motyw</string>
    <string name="pressureLabel">Ciśnienie:</string>
    <string name="altitudeLabel">Wysokość:</string>
    <string name="samplingFrequency">Częstotliwość próbkowania: (milisekundy)</string>
    <string name="_defaultSamplingFrequency">20</string>
    <string name="_setSamplingFrequency">Ustaw</string>
</resources>