<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/altitudeLabel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/sosButton"
        android:layout_width="119dp"
        android:layout_height="74dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="#C81414"
        android:text="@string/sosButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/compassBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="170dp"
        android:contentDescription="@string/compassBackgroundDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/compassPointer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/CompassPointerDesc"
        app:layout_constraintBottom_toBottomOf="@+id/compassBackground"
        app:layout_constraintEnd_toEndOf="@+id/compassBackground"
        app:layout_constraintStart_toStartOf="@+id/compassBackground"
        app:layout_constraintTop_toTopOf="@+id/compassBackground"
        app:srcCompat="@drawable/pointer" />

    <Switch
        android:id="@+id/nightThemeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:text="@string/styleSwitchDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flashlightTextView"
        app:layout_constraintEnd_toEndOf="@+id/flashlightButton"
        app:layout_constraintStart_toStartOf="@+id/flashlightButton"
        app:layout_constraintTop_toTopOf="@+id/sosButton" />

    <TextView
        android:id="@+id/angleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/compassBackground"
        app:layout_constraintStart_toStartOf="@+id/compassBackground"
        app:layout_constraintTop_toBottomOf="@+id/compassBackground" />

    <TextView
        android:id="@+id/coordinatesView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/angleView"
        app:layout_constraintStart_toStartOf="@+id/angleView"
        app:layout_constraintTop_toBottomOf="@+id/angleView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeThemeTextView"
        app:layout_constraintEnd_toEndOf="@+id/autoThemeButton"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="@+id/autoThemeButton"
        app:layout_constraintTop_toTopOf="@+id/sosButton" />

    <TextView
        android:id="@+id/pressureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/pressureLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pressureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/pressureLabel"
        app:layout_constraintTop_toTopOf="@+id/pressureLabel" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/altitudeLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/pressureLabel"
        app:layout_constraintTop_toBottomOf="@+id/pressureLabel" />

    <ToggleButton
        android:id="@+id/flashlightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sosButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/autoThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sosButton" />

    <TextView
        android:id="@+id/altitudeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>